changed chatpdf api and added doc
